--- a/package.json
+++ b/package.json
@@ -1,23 +1,29 @@
 {
-  "name": "blockchainfeed",
-  "version": "1.0.0",
-  "description": "",
-  "main": "app.js",
-  "scripts": {
-    "build": "webpack --config webpack.config.js"
-  },
-  "author": "Time Lab Digital",
-  "license": "ISC",
-  "devDependencies": {
-    "babel-core": "^6.25.0",
-    "babel-loader": "^7.0.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "express": "^4.15.3",
-    "webpack": "^2.6.1"
-  },
-  "dependencies": {
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4"
-  }
+    "name": "blockchainfeed",
+    "version": "1.0.0",
+    "description": "",
+    "main": "app.js",
+    "scripts": {
+        "build": "webpack --config webpack.config.js"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/timelpatel/blockchainfeed.git"
+    },
+    "author": "Time Lab Digital",
+    "license": "ISC",
+    "devDependencies": {
+        "babel-core": "^6.25.0",
+        "babel-loader": "^7.0.0",
+        "babel-preset-es2015": "^6.24.1",
+        "babel-preset-react": "^6.24.1",
+        "express": "^4.15.3",
+        "webpack": "^2.6.1"
+    },
+    "dependencies": {
+        "react": "^15.5.4",
+        "react-dom": "^15.5.4",
+        "react-redux": "^5.0.1",
+        "redux": "^3.6.0"
+    }
 }
