--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "build": "webpack --config webpack.config.js"
+    "build": "webpack --config webpack.config.js",
+    "test": "mocha --require babel-core/register || true"
   },
   "repository": {
     "type": "git",
@@ -17,7 +18,9 @@
     "babel-loader": "^7.0.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "chai": "^4.0.2",
     "express": "^4.15.3",
+    "mocha": "^3.4.2",
     "webpack": "^2.6.1"
   },
   "dependencies": {
