--- a/package.json
+++ b/package.json
@@ -21,13 +21,14 @@
     "chai": "^4.0.2",
     "express": "^4.15.3",
     "mocha": "^3.4.2",
-    "webpack": "^2.6.1"
+    "webpack": "^3.0.0"
   },
   "dependencies": {
     "axios": "^0.16.2",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-redux": "^5.0.1",
+    "react-router-dom": "^4.1.1",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0"
   }
