--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "app.js",
   "scripts": {
     "build": "webpack --config webpack.config.js",
+    "build-watch": "webpack --config webpack.config.js --watch",
     "test": "mocha --require babel-core/register || true"
   },
   "repository": {
@@ -25,6 +26,7 @@
   },
   "dependencies": {
     "axios": "^0.16.2",
+    "d3": "^4.9.1",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-redux": "^5.0.1",
