--- a/package.json
+++ b/package.json
@@ -20,8 +20,12 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "chai": "^4.0.2",
+    "css-loader": "^0.28.4",
     "express": "^4.15.3",
     "mocha": "^3.4.2",
+    "node-sass": "^4.5.3",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.18.2",
     "webpack": "^3.0.0"
   },
   "dependencies": {
